@@ -1,6 +1,7 @@
 package com.arnavdhamija.nearbysimple;
 
 import android.Manifest;
+import android.app.Notification;
 import android.app.NotificationManager;
 import android.app.PendingIntent;
 import android.content.Context;
@@ -15,6 +16,7 @@ import android.support.v4.util.SimpleArrayMap;
 import android.support.v7.app.AppCompatActivity;
 import android.support.v4.content.ContextCompat;
 import android.os.Bundle;
+import android.text.method.ScrollingMovementMethod;
 import android.util.Log;
 import android.view.View;
 import android.widget.Button;
@@ -39,7 +41,10 @@ import com.google.android.gms.nearby.connection.Strategy;
 import com.google.android.gms.tasks.OnFailureListener;
 import com.google.android.gms.tasks.OnSuccessListener;
 
+import java.io.BufferedReader;
 import java.io.File;
+import java.io.IOException;
+import java.io.InputStreamReader;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
 
@@ -48,6 +53,13 @@ public class MainActivity extends AppCompatActivity {
     private ConnectionsClient mConnectionClient;
     private NotificationManager mNotificationManager;
     private String connectedEndpoint;
+
+    private void mylogger(String tag, String msg) {
+        Log.d(tag, msg);
+        TextView logView = findViewById(R.id.logView);
+        logView.append(msg+"\n");
+    }
+
     @Override
     protected void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
@@ -76,7 +88,7 @@ public class MainActivity extends AppCompatActivity {
         final String TAG = "app";
         mConnectionClient = Nearby.getConnectionsClient(this);
         mNotificationManager = (NotificationManager) getSystemService(Context.NOTIFICATION_SERVICE);
-        Log.d("app", "wofo: " + permissionCheck);
+        mylogger("app", "wofo: " + permissionCheck);
         startAdvertising();
         startDiscovery();
 
@@ -85,15 +97,24 @@ public class MainActivity extends AppCompatActivity {
         button.setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View v) {
-                Log.d("app", "choosing img");
+                mylogger("app", "choosing img");
                 showImageChooser(connectedEndpoint);
             }
         });
         sendMsg.setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View v) {
-                Log.d(TAG, "pressed button");
+                mylogger(TAG, "pressed button");
                 sendWelcomeMessage();
+            }
+        });
+//
+        Button updateButton = findViewById(R.id.updateButton);
+        updateButton.setOnClickListener(new View.OnClickListener() {
+            @Override
+            public void onClick(View v) {
+                TextView logView = findViewById(R.id.logView);
+                logView.setText("");
             }
         });
     }
@@ -104,9 +125,9 @@ public class MainActivity extends AppCompatActivity {
             case 0: {
                 if (grantResults.length > 0
                         && grantResults[0] == PackageManager.PERMISSION_GRANTED) {
-                    Log.d("app", "Got coarse Loc :)");
+                    mylogger("app", "Got coarse Loc :)");
                 } else {
-                    Log.d("app", "oh well");
+                    mylogger("app", "oh well");
                     // permission denied, boo! Disable the
                     // functionality that depends on this permission.
                 }
@@ -121,33 +142,28 @@ public class MainActivity extends AppCompatActivity {
         mConnectionClient.sendPayload(connectedEndpoint, Payload.fromBytes(welcome.getBytes(UTF_8)));
     }
 
-    private static final int READ_REQUEST_CODE = 42;
     final static int PICK_IMAGE = 1; // required for getting the result from the image picker intent
 
     private void showImageChooser(String endpointId) {
-        Log.d("app", "endpnt id" + endpointId);
-//        Intent intent = new Intent(Intent.ACTION_OPEN_DOCUMENT);
+        mylogger("app", "endpnt id" + endpointId);
         Intent intent = new Intent();
 
         intent.setType("image/*");
         intent.setAction(Intent.ACTION_GET_CONTENT);
-        startActivityForResult(Intent.createChooser(intent, "Select Picture"), PICK_IMAGE);
-        //        intent.addCategory(Intent.CATEGORY_OPENABLE);
-//        intent.setType("image/*");
         intent.putExtra("endpointId", endpointId);
-//        startActivityForResult(intent, READ_REQUEST_CODE);
+        startActivityForResult(Intent.createChooser(intent, "Select Picture"), PICK_IMAGE);
     }
 
     @Override
     public void onActivityResult(int requestCode, int resultCode, Intent resultData) {
         if (requestCode == PICK_IMAGE && resultCode == this.RESULT_OK) {
             if (resultData != null) {
-                Log.d("app", "Got a data");
+                mylogger("app", "Got a data");
                 String endpointId = resultData.getStringExtra("endpointId");
 
                 // The URI of the file selected by the user.
                 Uri uri = resultData.getData();
-                Log.d("app", "chosen uri" + uri.toString());
+                mylogger("app", "chosen uri" + uri.toString());
 
                 // Open the ParcelFileDescriptor for this URI with read access.
                 try {
@@ -163,13 +179,26 @@ public class MainActivity extends AppCompatActivity {
                     Payload.File file = filePayload.asFile();
                     // Finally, send the file payload.
                     mConnectionClient.sendPayload(connectedEndpoint, filePayload);
-//                    Log.d("app", "successful send" + payloadFilenameMessage + " size " + file.getSize());
-                    Log.d("app", "successful send to " + connectedEndpoint + " size " + file.getSize());
+//                    mylogger();("app", "successful send" + payloadFilenameMessage + " size " + file.getSize());
+                    mylogger("app", "successful send to " + connectedEndpoint + " size " + file.getSize());
                 } catch (Exception e) {
-                    Log.d("app", "failsend" + e.getMessage());
+                    mylogger("app", "failsend" + e.getMessage());
                 }
             }
         }
+    }
+    private final SimpleArrayMap<Long, NotificationCompat.Builder> incomingPayloads = new SimpleArrayMap<>();
+    private final SimpleArrayMap<Long, NotificationCompat.Builder> outgoingPayloads = new SimpleArrayMap<>();
+
+    NotificationManager mNotificationManager = (NotificationManager)getSystemService(Context.NOTIFICATION_SERVICE);
+
+    private void sendPayload(String endpointId, Payload payload) {
+        if (payload.getType() == Payload.Type.BYTES) {
+            return;
+        }
+        NotificationCompat.Builder notification = buildNotification(payload, false);
+        mNotificationManager.notify((int)payload.getId(), notification.build());
+        outgoingPayloads.put(Long.valueOf(payload.getId()), notification);
     }
 
     private void startAdvertising() {
@@ -183,7 +212,7 @@ public class MainActivity extends AppCompatActivity {
                             @Override
                             public void onSuccess(Void unusedResult) {
                                 // We're advertising!
-                                Log.d("app", "Advertising Go!");
+                                mylogger("app", "Advertising Go!");
                             }
                         })
                 .addOnFailureListener(
@@ -211,28 +240,23 @@ public class MainActivity extends AppCompatActivity {
 
     private final PayloadCallback mPayloadCallback =
             new PayloadCallback() {
-//                private final SimpleArrayMap<Long, Payload> incomingPayloads = new SimpleArrayMap<>();
-//                private final SimpleArrayMap<Long, String> filePayloadFilenames = new SimpleArrayMap<>();
-
                 @Override
                 public void onPayloadReceived(String endpointId, Payload payload) {
-                    Log.d("app", "getting a payload");
+                    mylogger("app", "getting a payload");
                     if (payload.getType() == Payload.Type.BYTES) {
                         try {
                             String payloadFilenameMessage = new String(payload.asBytes(), "UTF-8");
 
-                            Log.d("app", "Getting a byte pyalod" + payloadFilenameMessage);
+                            mylogger("app", "Getting a byte pyalod" + payloadFilenameMessage);
 //                            addPayloadFilename(payloadFilenameMessage);
                         } catch (Exception e) {
 
                         }
                     } else if (payload.getType() == Payload.Type.FILE) {
-                        Log.d("app", "Getting a file pyalod");
-//                        NotificationCompat.Builder notification = buildNotification(payload, true /*isIncoming*/);
-//                        mNotificationManager.notify((int) payload.getId(), notification.build());
-
-                        // Add this to our tracking map, so that we can retrieve the payload later.
-//                        incomingPayloads.put(new Long(payload.getId()), payload);
+                        mylogger("app", "Getting a file pyalod");
+                        NotificationCompat.Builder notification = buildNotification(payload, true /*isIncoming*/);
+                        mNotificationManager.notify((int) payload.getId(), notification.build());
+                        incomingPayloads.put(Long.valueOf(payload.getId()), notification);
                     }
                 }
 
@@ -247,23 +271,50 @@ public class MainActivity extends AppCompatActivity {
 //                    filePayloadFilenames.put(Long.parseLong(payloadId), filename);
                 }
 
+
+
                 @Override
                 public void onPayloadTransferUpdate(String payloadId, PayloadTransferUpdate update) {
-                    if (update.getStatus() == PayloadTransferUpdate.Status.SUCCESS) {
-                        Log.d("app", "transfer done");
-                        //                        Payload payload = incomingPayloads.remove(payloadId);
-//                        if (payload.getType() == Payload.Type.FILE) {
-//                            // Retrieve the filename that was received in a bytes payload.
-//                            String newFilename = filePayloadFilenames.remove(payloadId);
-//
-//                            File payloadFile = payload.asFile().asJavaFile();
-//
-//                            // Rename the file.
-//                            payloadFile.renameTo(new File(payloadFile.getParentFile(), newFilename));
-//                        }
-//                    }
+                    NotificationCompat.Builder notification;
+                    if (incomingPayloads.containsKey(payloadId)) {
+                        notification = incomingPayloads.get(payloadId);
+                        if (update.getStatus() != PayloadTransferUpdate.Status.IN_PROGRESS) {
+                            // This is the last update, so we no longer need to keep track of this notification.
+                            incomingPayloads.remove(payloadId);
+                        }
+                    } else if (outgoingPayloads.containsKey(payloadId)) {
+                        notification = outgoingPayloads.get(payloadId);
+                        if (update.getStatus() != PayloadTransferUpdate.Status.IN_PROGRESS) {
+                            // This is the last update, so we no longer need to keep track of this notification.
+                            outgoingPayloads.remove(payloadId);
+                        }
                     }
+
+                    switch(update.getStatus()) {
+                        case Status.IN_PROGRESS:
+                            int size = (int)update.getTotalBytes();
+                            if (size == -1) {
+                                // This is a stream payload, so we don't need to update anything at this point.
+                                return;
+                            }
+                            notification.setProgress(size, (int)update.getBytesTransferred(), false /* indeterminate */);
+                            break;
+                        case Status.SUCCESS:
+                            // SUCCESS always means that we transferred 100%.
+                            notification
+                                    .setProgress(100, 100, false /* indeterminate */)
+                                    .setContentText("Transfer complete!");
+                            break;
+                        case Status.FAILURE:
+                            notification
+                                    .setProgress(0, 0, false)
+                                    .setContentText("Transfer failed");
+                            break;
+                    }
+
+                    mNotificationManager.notify(payloadId, notification.build());
                 }
+
             };
 
 
@@ -274,6 +325,7 @@ public class MainActivity extends AppCompatActivity {
                 public void onConnectionInitiated(
                         String endpointId, ConnectionInfo connectionInfo) {
                     // Automatically accept the connection on both sides.
+                    mylogger("app", "Connection initated");
                     mConnectionClient.acceptConnection(endpointId, mPayloadCallback);
                 }
 
@@ -281,7 +333,7 @@ public class MainActivity extends AppCompatActivity {
                 public void onConnectionResult(String endpointId, ConnectionResolution result) {
                     switch (result.getStatus().getStatusCode()) {
                         case ConnectionsStatusCodes.STATUS_OK:
-                            Log.d("app", "GGWP! :D:D:D");
+                            mylogger("app", "GGWP! :D:D:D");
                             Toast.makeText(getApplicationContext(), "Connection Established", Toast.LENGTH_LONG).show();
                             TextView textView = (TextView) findViewById(R.id.textbox0);
                             textView.setText("Connection Established with " + endpointId);
@@ -293,10 +345,10 @@ public class MainActivity extends AppCompatActivity {
                             break;
                         case ConnectionsStatusCodes.STATUS_CONNECTION_REJECTED:
                             // The connection was rejected by one or both sides.
-                            Log.d("app", "fail D:");
+                            mylogger("app", "fail D:");
                             break;
                         case ConnectionsStatusCodes.STATUS_ERROR:
-                            Log.d("app", "bigfail");
+                            mylogger("app", "bigfail");
                             // The connection broke before it was able to be accepted.
                             break;
                     }
@@ -306,7 +358,7 @@ public class MainActivity extends AppCompatActivity {
                 public void onDisconnected(String endpointId) {
                     // We've been disconnected from this endpoint. No more data can be
                     // sent or received.
-                    Log.d("app", "connection terminated, find a way to autostart");
+                    mylogger("app", "connection terminated, find a way to autostart");
                     TextView textView = (TextView) findViewById(R.id.textbox0);
                     textView.setText("disconnected from " + endpointId);
 
@@ -315,32 +367,34 @@ public class MainActivity extends AppCompatActivity {
                 }
             };
 
-
+    private final static int MAX_TRIES = 3;
     private final EndpointDiscoveryCallback mEndpointDiscoveryCallback =
             new EndpointDiscoveryCallback() {
                 @Override
                 public void onEndpointFound(
                         String endpointId, DiscoveredEndpointInfo discoveredEndpointInfo) {
-                    Log.d("app", "FOUND ENDPOINT: " + endpointId + "Info " + discoveredEndpointInfo.getEndpointName() + " id " + discoveredEndpointInfo.getServiceId());
+                    mylogger("app", "FOUND ENDPOINT: " + endpointId + "Info " + discoveredEndpointInfo.getEndpointName() + " id " + discoveredEndpointInfo.getServiceId());
                     mConnectionClient.requestConnection(
                             codeName,
                             endpointId,
                             mConnectionLifecycleCallback).addOnSuccessListener(new OnSuccessListener<Void>() {
                         @Override
                         public void onSuccess(Void aVoid) {
-                            Log.d("app", "requesting conn");
+                            mylogger("app", "requesting conn");
                         }
                     }).addOnFailureListener(new OnFailureListener() {
                         @Override
                         public void onFailure(@NonNull Exception e) {
-                            Log.d("app", "fail conn t_t" + e.getMessage());
+                            mylogger("app", "fail conn t_t" + e.getMessage());
+//                            startAdvertising();
+//                            startDiscovery();
                         }
                     });
                 }
 
                 @Override
                 public void onEndpointLost(String endpointId) {
-                    Log.d("app", "lost ENDPOINT: " + endpointId);
+                    mylogger("app", "lost ENDPOINT: " + endpointId);
 
                     // A previously discovered endpoint has gone away.
                 }
@@ -355,7 +409,7 @@ public class MainActivity extends AppCompatActivity {
                         new OnSuccessListener<Void>() {
                             @Override
                             public void onSuccess(Void unusedResult) {
-                                Log.d("app", "Discovery go!");
+                                mylogger("app", "Discovery go!");
                                 // We're discovering!
                             }
                         })
